<resources>

    <!-- Common. -->
    <string name="app_name">Talent New</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Sign Up</string>

    <!-- Local.
    <string name="url">http://192.168.42.45:8888</string>-->

    <string name="url">http://209.126.96.37:8080/modelAgencyWeb</string>-->

    <!--&lt;!&ndash; Remote AWS.&ndash;&gt;
    <string name="url">http://ec2-3-130-105-101.us-east-2.compute.amazonaws.com:8080/modelAgencyWeb</string>
    <string name="base_url">http://ec2-3-130-105-101.us-east-2.compute.amazonaws.com:8080/modelAgencyWeb</string>-->

    <string name="facebook_app_id">371121453829646</string>
    <string name="fb_login_protocol_scheme">fb371121453829646</string>

    <!-- Error. -->
    <string name="no_internet">Internet connection is not available.</string>
    <string name="connection_error">There is some problem in connecting server.</string>
    <string name="json_parser_error">Json parsing errror.</string>
    <string name="full_name_required">Please enter full name.</string>
    <string name="email_required">Please enter Email Id.</string>
    <string name="mobile_required">Please enter Mobile.</string>
    <string name="location_required">Please enter Location.</string>
    <string name="password_required">Please enter Password.</string>
    <string name="password_not_match">Password is not matching.</string>
    <string name="valid_email">Please enter valid Email ID.</string>
    <string name="accept_terms">Please accept Terms and Conditions.</string>

    <!-- Login. -->
    <string name="email_phone">Email/Phone</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="register_now">Register Now</string>

    <!-- Register. -->
    <string name="back">back</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="conf_password">Confirm Password</string>
    <string name="term_condition">Agree With Terms &amp; Conditions</string>

    <string name="logging_user">Logging User</string>

    <string name="creating_account">Creating Account</string>

    <string name="title_activity_register">Register</string>

    <string name="title_activity_login">Login</string>

    <string name="title_activity_home">HomeActivity</string>


    <!-- Dialogs. -->
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_registration_home">RegistrationHome</string>

    <!-- titles. -->
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="jobs">Jobs</string>
    <string name="profile">Profile</string>

    <string name="boost">Boost</string>
    <string name="blog">Blog</string>
    <string name="career">Career</string>
    <string name="courses">Course</string>
    <string name="title_activity_talent_register">Talent Register</string>
    <string name="title_activity_job_list">Jobs</string>
    <string name="title_activity_model_list">Models</string>
    <string name="title_activity_course_list">Course</string>
    <string name="title_activity_course_details">Course Details</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="lorem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_boost">BoostActivity</string>

    <string-array name="genre">
        <item>Beauty</item>
        <item>Fashion</item>
        <item>Casual</item>
        <item>Catalog</item>
        <item>Portrait</item>
        <item>Clothing</item>
        <item>Sport</item>
        <item>Fitness</item>
        <item>Plus Size</item>
        <item>Lingerie</item>
        <item>Swimsuit</item>
        <item>Body Parts</item>
        <item>Hair</item>
        <item>Erotic</item>
        <item>Art-Nude</item>
        <item>Business</item>
        <item>Hostess</item>
        <item>Promo</item>
        <item>Others</item>
    </string-array>

    <string-array name="new_genre">
        <item>Youtube</item>
        <item>Web Series</item>
        <item>Singing</item>
        <item>Make Up Artist</item>
        <item>Movie</item>
        <item>TV Serial</item>
        <item>Advertisement</item>
        <item>Anchor</item>
        <item>Script Writer</item>
        <item>Musician</item>
        <item>Dancer</item>
        <item>Stylist</item>
        <item>Photographer</item>
        <item>Standup Comedian</item>
        <item>Others</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="profile_info_1">
        <item>Height</item>
        <item>Weight</item>
        <item>Breast</item>
        <item>Waist</item>
        <item>Hip</item>
        <item>Experience</item>
    </string-array>
    <string-array name="profile_info_label_1">
        <item>height</item>
        <item>weight</item>
        <item>breast</item>
        <item>waist</item>
        <item>hip</item>
        <item>experience</item>
    </string-array>
    <string-array name="profile_info_2">
        <item>Ethnicity</item>
        <item>Skin Color</item>
        <item>Eye Color</item>
        <item>Hair Color</item>
        <item>Hair Length</item>
        <item>Acting Education</item>
    </string-array>
    <string-array name="profile_info_label_2">
        <item>ethnicity</item>
        <item>skinColor</item>
        <item>eyeColor</item>
        <item>hairColor</item>
        <item>hairLength</item>
        <item>actingEducation</item>
    </string-array>

    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head>
                <style type="text/css">
                    body {
                        font-size: %4$fpx;
                        color: #%2$s;
                        margin: %5$fpx %5$fpx %5$fpx %5$fpx;
                    }
                    a {color: #%3$s;}
                    img {display: inline; height: auto; max-width: 100%%;}
                    pre {white-space: pre-wrap;}
                    iframe {width: 90vw; height: 50.625vw;} /* 16:9 */
                </style>
            </head>
            <body>%1$s</body>
            </html>"
        ]]>
    </string>

    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_basic_profile">BasicProfileActivity</string>
    <string name="title_activity_model_contact">ModelContactActivity</string>
</resources>
